feat: implement worklog append, init guard, installDist, core tests, and v0.1 docs